@@ -37,7 +37,7 @@ import org.slf4j.LoggerFactory;
  * </pre>
  */
 public class CsvValidateCommand extends ConsumerCommand {
-  private static final Logger logger = LoggerFactory.getLogger(CsvValidateCommand.class);
+  private static final Logger LOGGER = LoggerFactory.getLogger(CsvValidateCommand.class);
 
   private final Set<String> requiredColumns;
   private final boolean hasHeader;
@@ -49,19 +49,21 @@ public class CsvValidateCommand extends ConsumerCommand {
    * @param requiredColumns 必須カラム名の配列
    * @throws IllegalArgumentException 必須カラムがnullの場合
    */
-  public CsvValidateCommand(String[] requiredColumns) {
-    this(requiredColumns, true, 10);
+  public CsvValidateCommand(final String... requiredColumns) {
+    this(true, 10, requiredColumns);
   }
 
   /**
    * 詳細設定を指定するコンストラクタ
    *
-   * @param requiredColumns 必須カラム名の配列
    * @param hasHeader ヘッダー行の存在フラグ
    * @param maxErrorsToReport 報告する最大エラー数
+   * @param requiredColumns 必須カラム名の配列
    * @throws IllegalArgumentException requiredColumnsがnullの場合
    */
-  public CsvValidateCommand(String[] requiredColumns, boolean hasHeader, int maxErrorsToReport) {
+  public CsvValidateCommand(
+      final boolean hasHeader, final int maxErrorsToReport, final String... requiredColumns) {
+    super();
     if (requiredColumns == null) {
       throw new IllegalArgumentException("Required columns cannot be null");
     }
@@ -70,16 +72,16 @@ public class CsvValidateCommand extends ConsumerCommand {
     this.maxErrorsToReport = Math.max(1, maxErrorsToReport);
 
     this.requiredColumns = new HashSet<>();
-    for (String column : requiredColumns) {
-      if (column != null && !column.trim().isEmpty()) {
+    for (final String column : requiredColumns) {
+      if (column != null && !column.isBlank()) {
         this.requiredColumns.add(column.trim());
       }
     }
 
     if (requiredColumns.length == 0) {
-      logger.info("No required columns specified, column validation will be skipped");
+      LOGGER.info("No required columns specified, column validation will be skipped");
     } else {
-      logger.info("Required columns: {}", this.requiredColumns);
+      LOGGER.info("Required columns: {}", this.requiredColumns);
     }
   }
 
@@ -91,10 +93,10 @@ public class CsvValidateCommand extends ConsumerCommand {
    * @throws StreamProcessingException CSVバリデーションエラーが発生した場合
    */
   @Override
-  public void consume(InputStream inputStream) throws IOException {
+  public void consume(final InputStream inputStream) throws IOException {
     Objects.requireNonNull(inputStream, "InputStream cannot be null");
 
-    logger.info(
+    LOGGER.info(
         "Starting CSV validation - hasHeader: {}, requiredColumns: {}",
         hasHeader,
         requiredColumns.size());
@@ -110,7 +112,7 @@ public class CsvValidateCommand extends ConsumerCommand {
         throw new StreamProcessingException("CSV validation failed: CSV file is empty");
       }
 
-      logger.debug("Read {} rows from CSV", allRows.size());
+      LOGGER.debug("Read {} rows from CSV", allRows.size());
 
       String[] headers = null;
       int dataStartRow = 0;
@@ -132,15 +134,15 @@ public class CsvValidateCommand extends ConsumerCommand {
         handleValidationErrors(validationErrors);
       }
 
-      logger.info("CSV validation completed successfully");
+      LOGGER.info("CSV validation completed successfully");
 
     } catch (CsvException e) {
-      logger.error("CSV parsing error: {}", e.getMessage(), e);
+      LOGGER.error("CSV parsing error: {}", e.getMessage(), e);
       throw new StreamProcessingException("Failed to parse CSV: " + e.getMessage(), e);
     } catch (StreamProcessingException e) {
       throw e;
     } catch (Exception e) {
-      logger.error("CSV validation failed: {}", e.getMessage(), e);
+      LOGGER.error("CSV validation failed: {}", e.getMessage(), e);
       throw new StreamProcessingException("Failed to parse CSV: " + e.getMessage(), e);
     }
   }
@@ -189,7 +191,7 @@ public class CsvValidateCommand extends ConsumerCommand {
       }
     }
 
-    logger.debug("Header validation completed - {} columns found", headers.length);
+    LOGGER.debug("Header validation completed - {} columns found", headers.length);
   }
 
   /** データ行のバリデーション */
@@ -239,7 +241,7 @@ public class CsvValidateCommand extends ConsumerCommand {
       validRows++;
     }
 
-    logger.debug("Data validation completed - {} valid rows, {} error rows", validRows, errorRows);
+    LOGGER.debug("Data validation completed - {} valid rows, {} error rows", validRows, errorRows);
 
     if (validRows == 0 && startRow < allRows.size()) {
       errors.add("No valid data rows found");
@@ -262,17 +264,17 @@ public class CsvValidateCommand extends ConsumerCommand {
 
     for (int i = 0; i < errors.size(); i++) {
       errorBuilder.append("\n  ").append(i + 1).append(". ").append(errors.get(i));
-      logger.error("CSV validation error {}: {}", i + 1, errors.get(i));
+      LOGGER.error("CSV validation error {}: {}", i + 1, errors.get(i));
     }
 
     String errorMessage = errorBuilder.toString();
-    logger.error("CSV validation summary: {}", errorMessage);
+    LOGGER.error("CSV validation summary: {}", errorMessage);
 
     // エラーメッセージが長すぎる場合は切り詰める（可読性向上のため）
     String finalErrorMessage = errorMessage;
     if (errorMessage.length() > 1000) {
       finalErrorMessage = errorMessage.substring(0, 997) + "...";
-      logger.warn(
+      LOGGER.warn(
           "Error message truncated due to length (original: {} chars)", errorMessage.length());
     }
 
@@ -293,7 +295,7 @@ public class CsvValidateCommand extends ConsumerCommand {
    *
    * @return ヘッダー行ありの場合true
    */
-  public boolean hasHeader() {
+  public boolean hasHeaderRow() {
     return hasHeader;
   }
 
